# app/Http/Controllers/Controller.php
@@ -8,8 +8,8 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Info(
- *    title="Your super  ApplicationAPI",
- *    version="1.0.0",
+ *    title="API's Consultas de transacciones",
+ *    version="1.0.1",
  * )
  * * @OA\Server(url="http://localhost/backend-api-consultas/public")
 */
